# raptor

./: CMakeLists.txt
cmake/: fpga_config.cmake  package-lock.cmake
doc/methods/05_search_fpga/: index.md
doc/usage/06_search_fpga/: index.md
include/raptor/: call_parallel_on_bins.hpp
include/raptor/argument_parsing/: search_arguments.hpp
include/raptor/fpga/: min_ibf_fpga_oneapi.hpp
include/raptor/search/: do_parallel.hpp  search_singular_ibf.hpp
include/raptor/search/fpga/: min_ibf_fpga_oneapi.hpp
src/: CMakeLists.txt
src/argument_parsing/: CMakeLists.txt  compute_bin_size.cpp  search_parsing.cpp
src/fpga/: CMakeLists.txt  raptor_search_fpga_oneapi.cpp
src/prepare/: compute_minimiser.cpp
src/search/: CMakeLists.txt  raptor_search.cpp  search_partitioned_ibf.cpp
src/search/fpga/: CMakeLists.txt  search_fpga.cpp
